--- a/wordscape.html
+++ b/wordscape.html
@@ -1,140 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Wordscape Demo</title>
-<style>
-  body {
-    margin: 0;
-    overflow: hidden;
-    background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
-    background-size: cover;
-    font-family: 'Segoe UI', sans-serif;
-    user-select: none;
-  }
-  .overlay {
-    position: absolute;
-    inset: 0;
-    background: rgba(0,0,0,0.4);
-  }
-  .board {
-    position: absolute;
-    top: 5%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    text-align: center;
-    color: white;
-    font-size: 28px;
-    letter-spacing: 6px;
-  }
-  .letters {
-    position: absolute;
-    bottom: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 15px;
-  }
-  .letter {
-    width: 70px;
-    height: 70px;
-    background: radial-gradient(circle at top left, #ffb347, #ffcc33);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: transform 0.1s;
-  }
-  .letter.active {
-    background: radial-gradient(circle at top left, #ff9966, #ff5e62);
-    transform: scale(1.1);
-  }
-  .word-display {
-    margin-top: 15px;
-    font-size: 24px;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wordscape Game</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: url('background.jpg') center/cover no-repeat;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      overflow: hidden;
+    }
+
+    .overlay {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backdrop-filter: blur(8px);
+      background: rgba(0, 0, 0, 0.3);
+    }
+
+    .game-container {
+      position: relative;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 48px;
+      letter-spacing: 3px;
+      margin-bottom: 30px;
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(3, 80px);
+      grid-gap: 10px;
+      margin-bottom: 30px;
+    }
+
+    .cell {
+      width: 80px;
+      height: 80px;
+      background: #ffa74a;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 15px;
+      font-size: 32px;
+      font-weight: bold;
+      color: #fff;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    }
+
+    .letters {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+
+    .letter {
+      width: 80px;
+      height: 80px;
+      background: #ff7f50;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 32px;
+      font-weight: bold;
+      color: #fff;
+      cursor: pointer;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      transition: transform 0.2s;
+    }
+
+    .letter:hover {
+      transform: scale(1.1);
+      background: #ff9b6a;
+    }
+
+    .instructions {
+      margin-top: 20px;
+      font-size: 16px;
+      background: rgba(255,255,255,0.1);
+      padding: 10px 20px;
+      border-radius: 10px;
+      backdrop-filter: blur(5px);
+    }
+
+    /* 🎵 Logo */
+    .logo {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 120px;
+      opacity: 0.9;
+    }
+  </style>
 </head>
 <body>
-<div class="overlay"></div>
+  <div class="overlay"></div>
 
-<div class="board" id="board">
-  <div>_ _ _ _</div>
-  <div>_ _ _</div>
-  <div>_ _</div>
-  <div>_ _</div>
-  <div class="word-display" id="currentWord"></div>
-</div>
+  <!-- 🪩 Logo góc trái -->
+  <img src="logo.png" class="logo" alt="Game Logo">
 
-<div class="letters" id="letters"></div>
+  <div class="game-container">
+    <h1>WORDSCAPE</h1>
 
-<audio id="clickSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_58c10c12f8.mp3?filename=click-124467.mp3"></audio>
-<audio id="correctSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_f8d4deae3c.mp3?filename=correct-6033.mp3"></audio>
-<audio id="wrongSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9a82b6a3f.mp3?filename=error-126627.mp3"></audio>
-<audio id="bgm" src="https://cdn.pixabay.com/download/audio/2022/11/22/audio_eb6c089d0b.mp3?filename=relaxing-guitar-loop-12613.mp3" loop autoplay></audio>
+    <div class="grid">
+      <div class="cell">W</div>
+      <div class="cell">O</div>
+      <div class="cell">R</div>
+      <div class="cell">D</div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+    </div>
 
-<script>
-const letters = ['W','O','R','D'];
-const validWords = ['WORD','ROW','DO','OR'];
-let currentWord = '';
-let found = [];
+    <div class="letters">
+      <div class="letter">W</div>
+      <div class="letter">O</div>
+      <div class="letter">R</div>
+      <div class="letter">D</div>
+    </div>
 
-const lettersContainer = document.getElementById('letters');
-const currentDisplay = document.getElementById('currentWord');
-const board = document.getElementById('board');
-const clickSound = document.getElementById('clickSound');
-const correctSound = document.getElementById('correctSound');
-const wrongSound = document.getElementById('wrongSound');
-const bgm = document.getElementById('bgm');
+    <div class="instructions">
+      Touch or click letters to form words.<br>
+      Release to submit!
+    </div>
+  </div>
 
-bgm.volume = 0.4;
-
-letters.forEach(letter => {
-  const el = document.createElement('div');
-  el.className = 'letter';
-  el.textContent = letter;
-  el.addEventListener('click', () => {
-    clickSound.currentTime = 0; clickSound.play();
-    el.classList.add('active');
-    currentWord += letter;
-    currentDisplay.textContent = currentWord;
-  });
-  lettersContainer.appendChild(el);
-});
-
-document.body.addEventListener('mouseup', checkWord);
-
-function checkWord() {
-  if (!currentWord) return;
-  const word = currentWord.toUpperCase();
-  const elts = document.querySelectorAll('.letter');
-  elts.forEach(e => e.classList.remove('active'));
-
-  if (validWords.includes(word) && !found.includes(word)) {
-    found.push(word);
-    correctSound.currentTime = 0; correctSound.play();
-    const children = board.children;
-    for (let i=0; i<children.length; i++) {
-      if (children[i].textContent.includes('_') && children[i].textContent.replace(/ /g,'').length === word.length) {
-        children[i].textContent = word.split('').join(' ');
-        break;
-      }
-    }
-  } else {
-    wrongSound.currentTime = 0; wrongSound.play();
-  }
-
-  currentWord = '';
-  currentDisplay.textContent = '';
-}
-</script>
+  <!-- 🎵 Nhạc nền -->
+  <audio autoplay loop>
+    <source src="music.mp3" type="audio/mpeg">
+  </audio>
 </body>
 </html>
