--- a/wordscape.html
+++ b/wordscape.html
@@ -5,144 +5,115 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wordscape Game</title>
   <style>
+    * { margin:0; padding:0; box-sizing: border-box; user-select: none; }
     body {
-      margin: 0;
+      width:100vw; height:100vh;
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      position: relative;
       font-family: 'Poppins', sans-serif;
-      background: url('background.jpg') center/cover no-repeat;
-      height: 100vh;
       display: flex;
-      justify-content: center;
       align-items: center;
-      color: white;
-      overflow: hidden;
+      justify-content: center;
+      color: #fff;
     }
-
     .overlay {
       position: absolute;
-      width: 100%;
-      height: 100%;
+      inset:0;
+      background: rgba(0,0,0,0.3);
       backdrop-filter: blur(8px);
-      background: rgba(0, 0, 0, 0.3);
+      z-index:1;
     }
-
-    .game-container {
+    .container {
       position: relative;
-      z-index: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      z-index:2;
       text-align: center;
+      width: 320px;
     }
-
-    h1 {
-      font-size: 48px;
-      letter-spacing: 3px;
-      margin-bottom: 30px;
-      text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
+    img.logo {
+      width: 120px;
+      margin-bottom: 20px;
     }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 80px);
-      grid-gap: 10px;
-      margin-bottom: 30px;
+    h1.title {
+      font-size: 36px;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
     }
-
-    .cell {
-      width: 80px;
-      height: 80px;
-      background: #ffa74a;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 15px;
-      font-size: 32px;
-      font-weight: bold;
-      color: #fff;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-
     .letters {
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-bottom: 20px;
     }
-
     .letter {
       width: 80px;
       height: 80px;
-      background: #ff7f50;
       border-radius: 50%;
+      background: rgba(255,255,255,0.9);
+      color: #333;
       display: flex;
-      justify-content: center;
       align-items: center;
-      font-size: 32px;
+      justify-content: center;
+      font-size: 28px;
       font-weight: bold;
-      color: #fff;
       cursor: pointer;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-      transition: transform 0.2s;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      transition: transform .2s, background .3s;
     }
-
     .letter:hover {
       transform: scale(1.1);
-      background: #ff9b6a;
+      background: #ffd166;
     }
-
-    .instructions {
+    .found {
       margin-top: 20px;
-      font-size: 16px;
-      background: rgba(255,255,255,0.1);
-      padding: 10px 20px;
-      border-radius: 10px;
-      backdrop-filter: blur(5px);
-    }
-
-    /* 🎵 Logo */
-    .logo {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      width: 120px;
-      opacity: 0.9;
+      font-size: 20px;
     }
   </style>
 </head>
 <body>
   <div class="overlay"></div>
-
-  <!-- 🪩 Logo góc trái -->
-  <img src="logo.png" class="logo" alt="Game Logo">
-
-  <div class="game-container">
-    <h1>WORDSCAPE</h1>
-
-    <div class="grid">
-      <div class="cell">W</div>
-      <div class="cell">O</div>
-      <div class="cell">R</div>
-      <div class="cell">D</div>
-      <div class="cell"></div>
-      <div class="cell"></div>
+  <div class="container">
+    <!-- Logo -->
+    <img class="logo" src="logo.png" alt="Logo">
+    <h1 class="title">WORDSCAPE</h1>
+    <div class="letters" id="letters">
+      <div class="letter">G</div>
+      <div class="letter">A</div>
+      <div class="letter">M</div>
+      <div class="letter">E</div>
     </div>
-
-    <div class="letters">
-      <div class="letter">W</div>
-      <div class="letter">O</div>
-      <div class="letter">R</div>
-      <div class="letter">D</div>
-    </div>
-
-    <div class="instructions">
-      Touch or click letters to form words.<br>
-      Release to submit!
-    </div>
+    <div class="found" id="found"></div>
   </div>
 
-  <!-- 🎵 Nhạc nền -->
-  <audio autoplay loop>
+  <audio id="bgm" loop>
     <source src="music.mp3" type="audio/mpeg">
   </audio>
+
+  <script>
+    const letters = document.querySelectorAll('.letter');
+    const foundDiv = document.getElementById('found');
+    const bgm = document.getElementById('bgm');
+
+    let current = '';
+    let found = [];
+
+    letters.forEach(l => {
+      l.addEventListener('click', () => {
+        current += l.textContent;
+        checkWord();
+      });
+    });
+
+    function checkWord() {
+      const valid = ["GAME","AGE","ME","AM"];
+      if (valid.includes(current) && !found.includes(current)) {
+        found.push(current);
+        const el = document.createElement('div');
+        el.textContent = current;
+        foundDiv.appendChild(el);
+        bgm.play().catch(()=>{});
+      }
+      // reset
+      current = '';
+    }
+  </script>
 </body>
 </html>
